добавлен usestate для определения состояние содержимого страницы а так же коррекция календаря в стилях(есть лишний не рабочий код для index.html в отношении каледаря

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>design_soft_weare-education</title>
   </head>
   <body>
+    
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script>
+        console.log(`
+   _____
+  /     \\
+ /_______\\
+ |  ***  | 
+ |  ***  | 
+ |_______|
+        `);
+    </script>
 </html>
