добавленна фильтрация по поиску

--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
   </body>
   <script>
         console.log(`
-   _____
-  /     \\
- /_______\\
- |  ***  | 
- |  ***  | 
- |_______|
+Author ::: Parkhomets - Kelshtein
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
         `);
     </script>
 </html>
